// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fail to reach the server 1`] = `
Array [
  Array [
    "starting uploading sourcemaps with configs: {\\"logLevel\\":\\"warn\\",\\"ignoreErrors\\":false,\\"serviceName\\":\\"mock-service\\",\\"serviceVersion\\":\\"mock-version\\",\\"publicPath\\":\\"/mock-folder\\",\\"serverURL\\":\\"mock-url\\"}.",
  ],
  Array [
    "uploading main.js.map to Elastic APM with bundle_filepath: /mock-folder/main.js.",
  ],
]
`;

exports[`fail to reach the server 2`] = `
Array [
  Array [
    "failed",
  ],
]
`;

exports[`send to the server successfully 1`] = `
Array [
  Array [
    "starting uploading sourcemaps with configs: {\\"logLevel\\":\\"warn\\",\\"ignoreErrors\\":false,\\"serviceName\\":\\"mock-service\\",\\"serviceVersion\\":\\"mock-version\\",\\"publicPath\\":\\"/mock-folder\\",\\"serverURL\\":\\"mock-url\\"}.",
  ],
  Array [
    "uploading main.js.map to Elastic APM with bundle_filepath: /mock-folder/main.js.",
  ],
  Array [
    "uploaded main.js.map.",
  ],
  Array [
    "finished uploading sourcemaps.",
  ],
]
`;

exports[`send to the server successfully 2`] = `
"--FIXED-BOUNDARY
Content-Disposition: form-data; name=\\"sourcemap\\"; filename=\\"main.js.map\\"
Content-Type: application/json

{\\"version\\":3,\\"sources\\":[\\"webpack://elastic-apm-sourcemap-webpack-plugin/./test/entry.js\\"],\\"names\\":[\\"console\\",\\"log\\"],\\"mappings\\":\\"AAAAA,QAAQC,IAAI\\",\\"file\\":\\"main.js\\",\\"sourcesContent\\":[\\"console.log('hello');\\\\n\\"],\\"sourceRoot\\":\\"\\"}
--FIXED-BOUNDARY
Content-Disposition: form-data; name=\\"service_version\\"

mock-version
--FIXED-BOUNDARY
Content-Disposition: form-data; name=\\"bundle_filepath\\"

/mock-folder/main.js
--FIXED-BOUNDARY
Content-Disposition: form-data; name=\\"service_name\\"

mock-service
--FIXED-BOUNDARY--
"
`;
